# Launcher

./: README.md  com.acuity.Launcher.json  meson.build
data/: com.acuity.Launcher.desktop.in  com.acuity.Launcher.gschema.xml  com.acuity.Launcher.metainfo.xml.in  com.acuity.Launcher.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: launcher.gresource.xml  launcher.in  main.py  meson.build  project.py  utils.py  window.py  window.ui
